// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly desktop version 1`] = `
<ContextProvider
  value={
    Object {
      "dialogComponents": Array [],
    }
  }
>
  <Children />
</ContextProvider>
`;

exports[`should render correctly desktop version 2`] = `
<ContextProvider
  value={
    Object {
      "dialogComponents": Array [
        Object {
          "component": <div>
            Hello World
          </div>,
          "id": "12345",
        },
        Object {
          "component": <span>
            Hello Flux
          </span>,
          "id": "67890",
        },
        Object {
          "component": <span>
            Flux Login
          </span>,
          "id": "flux-id-login",
        },
      ],
    }
  }
>
  <Children />
</ContextProvider>
`;

exports[`should render correctly desktop version 3`] = `
<ContextProvider
  value={
    Object {
      "dialogComponents": Array [
        Object {
          "component": <div>
            Hello World
          </div>,
          "id": "12345",
        },
        Object {
          "component": <span>
            Flux Login
          </span>,
          "id": "flux-id-login",
        },
      ],
    }
  }
>
  <Children />
</ContextProvider>
`;

exports[`should render correctly desktop version 4`] = `
<ContextProvider
  value={
    Object {
      "dialogComponents": Array [
        Object {
          "component": <div>
            Hello World
          </div>,
          "id": "12345",
        },
        Object {
          "component": <span>
            Flux Login
          </span>,
          "id": "flux-id-login",
        },
      ],
    }
  }
>
  <Children />
</ContextProvider>
`;

exports[`should render correctly desktop version 5`] = `
<ContextProvider
  value={
    Object {
      "dialogComponents": Array [],
    }
  }
>
  <Children />
</ContextProvider>
`;

exports[`should render correctly web version 1`] = `
<ContextProvider
  value={
    Object {
      "dialogComponents": Array [
        Object {
          "component": <span>
            Flux Login
          </span>,
          "id": "flux-id-login",
        },
      ],
    }
  }
>
  <Children />
</ContextProvider>
`;

exports[`should render correctly web version 2`] = `
<ContextProvider
  value={
    Object {
      "dialogComponents": Array [],
    }
  }
>
  <Children />
</ContextProvider>
`;
